--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-Flask==2.3.3
-Flask-JWT-Extended==4.5.3
-Flask-SQLAlchemy==3.0.3
+Flask==3.0.2
+Flask-SQLAlchemy==3.1.1
+Flask-Login==0.6.3
 Flask-CORS==4.0.0
-python-dotenv==1.0.0
-nltk==3.8.1
-beautifulsoup4==4.12.2
-requests==2.31.0
-PyPDF2==3.0.1
-Werkzeug==2.3.7
+groq==0.4.2
+pypdf==4.0.1
+python-dotenv==1.0.1
+Pillow==10.2.0
+Werkzeug==3.0.1
+gunicorn==21.2.0
